[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python_project_temp"
vertion = "0.0.1"
authors = [
    {name = "Gao Feng", email = "gf0517@gmail.com"},
]
description = "This is a file structure template for a empty python project."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["template"]
license = {text = "MIT"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
]